# grandine

./: .gitignore  Cargo.toml  Makefile  clippy.toml  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml  release.yml
ad_hoc_bench/src/: main.rs
arithmetic/src/: lib.rs
attestation_verifier/src/: attestation_verifier.rs
benches/: Cargo.toml
benches/benches/: fork_choice_store.rs  hashing.rs
binary_utils/src/: lib.rs
bindings/csharp/: .gitignore  Cargo.toml  build.rs
bindings/csharp/Grandine.NethermindPlugin/: Grandine.NethermindPlugin.csproj  NativeMethods.g.cs  NativeMethods.impl.cs
bindings/csharp/src/: lib.rs
block_producer/: Cargo.toml
block_producer/src/: block_producer.rs  misc.rs
builder_api/src/: api.rs
database/: Cargo.toml
database/src/: lib.rs
deposit_tree/: Cargo.toml
eip_7594/: Cargo.toml
eip_7594/src/: lib.rs
eth1_api/: Cargo.toml
eth1_api/src/: execution_blob_fetcher.rs  lib.rs  misc.rs  tasks.rs
execution_engine/: Cargo.toml
execution_engine/src/: lib.rs  types.rs
factory/src/: lib.rs
features/: Cargo.toml
features/src/: lib.rs
features/tests/: both_syntaxes_produce_correct_output.rs  feature_macro_produce_correct_output.rs
fork_choice_control/: Cargo.toml
fork_choice_control/src/: block_processor.rs  controller.rs  events.rs  helpers.rs  lib.rs  messages.rs  misc.rs  mutator.rs  queries.rs  spec_tests.rs  specialized.rs  storage.rs  tasks.rs  thread_pool.rs
fork_choice_store/: Cargo.toml
fork_choice_store/src/: misc.rs  store.rs  store_config.rs
genesis/src/: lib.rs
grandine/: Cargo.toml
grandine/src/: grandine_args.rs  grandine_config.rs  main.rs
grandine_version/: Cargo.toml
helper_functions/src/: error.rs  misc.rs
http_api/: Cargo.toml
http_api/src/: context.rs  global.rs  routing.rs  standard.rs  task.rs
http_api_utils/src/: helpers.rs  traits.rs
kzg_utils/src/: eip_7594.rs
logging/src/: lib.rs
metrics/src/: service.rs
operation_pools/: Cargo.toml
operation_pools/src/: manager.rs  messages.rs
p2p/: Cargo.toml
p2p/src/: back_sync.rs  block_sync_service.rs  messages.rs  network.rs  sync_manager.rs
prometheus_metrics/dashboards/: overview.json  peerdas.json  pools.json  traces.json
prometheus_metrics/src/: metrics.rs
pubkey_cache/: Cargo.toml
pubkey_cache/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: db_info.rs  defaults.rs  grandine_args.rs  lib.rs  (+3 more)
validator/: Cargo.toml
zkvm/: README.md
zkvm/guest/zisk/: Cargo.toml
zkvm/guest/zisk/src/: main.rs
(+64 files in other folders)
