[package]
name = 'csharp_grandine'
edition = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
c_grandine = { workspace = true, default-features = false }
csbindgen = { workspace = true }
toml = { workspace = true }

[features]
default = ['blst']
arkworks = ['c_grandine/arkworks']
blst = ['c_grandine/blst']
constantine = ['c_grandine/constantine']
mcl = ['c_grandine/mcl']
zkcrypto = ['c_grandine/zkcrypto']
